# rings

./: README.md  rings.cabal  stack.yaml
src/Data/: Algebra.hs  Dioid.hs  Field.hs  Group.hs  Magma.hs  Module.hs  Quantale.hs  Ring.hs  Semifield.hs  Semilattice.hs  Semimodule.hs  Semiring.hs
src/Data/Algebra/: Quaternion.hs
src/Data/Bool/: Instance.hs  Orphan.hs
src/Data/Complex/: Instance.hs  Orphan.hs
src/Data/Connection/: Round.hs
src/Data/Dioid/: Interval.hs  Property.hs  Signed.hs  Vector.hs
src/Data/Double/: Instance.hs
src/Data/Fixed/: Instance.hs
src/Data/Float/: Instance.hs  Orphan.hs
src/Data/Group/: Property.hs
src/Data/Int/: Instance.hs  Orphan.hs
src/Data/Module/: Matrix.hs  Quaternion.hs  V2.hs  V3.hs  V4.hs
src/Data/Ring/: Index.hs  Syntax.hs
src/Data/Semifield/: Quaternion.hs
src/Data/Semigroup/: Additive.hs  Multiplicative.hs  Orphan.hs  Property.hs  Quantale.hs
src/Data/Semimodule/: Algebra.hs  Basis.hs  Combinator.hs  Dual.hs  Finite.hs  Free.hs  Matrix.hs  Operator.hs  Transform.hs  V2.hs  V3.hs  V4.hs  Vector.hs
src/Data/Semiring/: Free.hs  Heyting.hs  Matrix.hs  Module.hs  Property.hs  Syntax.hs  Tropical.hs  V2.hs  V3.hs  V4.hs
src/Data/Word/: Instance.hs  Orphan.hs
src/Prelude/: Ring.hs
test/: test.hs
test/Test/Data/Dioid/: Signed.hs
