name:                rings
version:             0.0.2.4
synopsis:            Ring-like objects.
description:         Semirings, rings, division rings, modules, and algebras.
homepage:            https://github.com/cmk/rings
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
category:            Math, Numerical
stability:           Experimental
build-type:          Simple
tested-with:         GHC == 8.6.3
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Data.Group
    , Data.Semiring

    , Data.Semiring.Property
    , Data.Semifield
    , Data.Semimodule
    , Data.Semimodule.V2
    , Data.Semimodule.V3
    , Data.Semimodule.V4
    , Data.Semimodule.Matrix

    , Data.Semigroup.Additive
    , Data.Semigroup.Multiplicative
    , Data.Magma
    , Data.Algebra
    , Data.Algebra.Quaternion

  default-extensions:
      ScopedTypeVariables
    , TypeApplications
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleContexts
    , FlexibleInstances
    , NoImplicitPrelude
    , TypeOperators

  build-depends:       
      base           >= 4.10    && < 5.0
    , lawz           >= 0.0.1   && < 1.0
    , adjunctions    >= 4.4     && < 5.0
    , containers     >= 0.4.0   && < 0.7
    , distributive   >= 0.3     && < 1.0
    , semigroupoids  >= 5.0     && < 6.0

  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  other-modules:
      Test.Data.Dioid.Signed
  build-depends:       
      base == 4.*
    , connections -any 
    , hedgehog
    , property
    , rings
  default-extensions:
      ScopedTypeVariables,
      TypeApplications
  main-is: test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
