name:                rings
version:             0.1.3
synopsis:            Ring-like objects.
description:         Semirings, rings, division rings, modules, and algebras.
homepage:            https://github.com/cmk/rings
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
category:            Math, Numerical
stability:           Experimental
build-type:          Simple
tested-with:         GHC == 8.6.3
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
      Data.Algebra
    , Data.Semiring
    , Data.Semiring.Free
    --, Data.Semiring.Matrix
    --, Data.Semiring.Property
    , Data.Semifield
    --, Data.Semilattice
    --, Data.Semilattice.N5
    --, Data.Semilattice.Property

    --, Numeric.Prelude

  default-extensions:
      ScopedTypeVariables
    , TypeApplications
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleContexts
    , FlexibleInstances
    , NoImplicitPrelude
    , TypeOperators

  build-depends:       
      base            >= 4.10    && < 5.0
    , adjunctions     >= 4.4     && < 5.0
    , containers      >= 0.4.0   && < 1.0
    , connections     >= 0.0.3   && < 0.1
    , finite-typelits >= 0.1.4.2 && < 0.2
    , magmas          >= 0.0.1   && < 1.0
    , semigroupoids   >= 5.0     && < 6.0
    , profunctors     >= 5.3     && < 6

    , vector-sized
