name:                rings
version:             0.2
synopsis:            Ring-like objects.
description:         Rings, semirings, division rings, lattices, modules, and algebras.
homepage:            https://github.com/cmk/rings
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
category:            Math, Numerical
stability:           Experimental
build-type:          Simple
tested-with:         GHC == 8.6.3
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  hs-source-dirs:   src
  default-language: Haskell2010
  -- ghc-options: -Wall -Werror

  exposed-modules:
      Data.Ring

    , Data.Semiring
    , Data.Semigroup.Additive

    , Data.Semimodule
    , Data.Semimodule.Free
    , Data.Semimodule.Algebra
    , Data.Semimodule.Transform
 
  default-extensions:
      ScopedTypeVariables
    , TypeApplications
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleContexts
    , FlexibleInstances
    , NoImplicitPrelude
    , TypeOperators

  build-depends:       
      base           >= 4.10  && < 5.0
    , adjunctions    >= 4.4   && < 5.0
    , containers     >= 0.4.0 && < 1.0
    , connections    >= 0.1.0 && < 0.2
    , distributive   >= 0.3   && < 1.0
    , semigroupoids  >= 5.0   && < 6.0
    , finite-typelits >= 0.1.4.2 && < 0.2
    , groups         >= 0.4.1.0 && < 0.5
    , universe-base  >= 1.1.1 && < 2.0
    , transformers   >= 0.2   && < 0.6 
    , profunctors    >= 5.3   && < 6
